--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>二次元风格の个人博客</title>
+    <title>天水の个人博客</title>
     <meta name="description" content="一只叫做派小星的阿宅">
     <meta name="keywords" content="二次元，宅属性，前端，编程，全栈，绘画，设计">
     <link rel="icon" href="https://www.bilibili.com/favicon.ico">
@@ -51,7 +51,7 @@
                     </div>
                 </span>
                 <header>
-                    <h2>派小星の泡芙</h2>
+                    <h2>天水の小屋</h2>
                     <p>千里之行，始于足下！
                         <br>我才不要那么没用！！
                     </p>
