--- a/detail.html
+++ b/detail.html
@@ -86,12 +86,12 @@
     <!-- Footer -->
     <footer id="footer">
         <ul class="copyright">
-            <li>&copy; 2000-2023 Blue dot net All Rights Reserved</li>
+            <li>&copy; 2025-202？ Blue dot net All Rights Reserved</li>
             <li>Design: <a>LOGOBAKERY</a></li>
             <div
                 style="text-decoration:none; height:20px; margin-top: 20px; line-height:20px; text-align:center;display:flex;justify-content: center;">
                 <img src="https://www.nanningcloud.com/Uploads/2022-10-30/bg_logo.nanningcloud.png" />
-                <p style="height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">沪ICP备666888号-</p>
+                <p style="height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">玛卡巴卡-</p>
             </div>
         </ul>
     </footer>
