--- a/detail.html
+++ b/detail.html
@@ -86,8 +86,8 @@
     <!-- Footer -->
     <footer id="footer">
         <ul class="copyright">
-            <li>&copy; 2025-202？ Blue dot net All Rights Reserved</li>
-            <li>Design: <a>LOGOBAKERY</a></li>
+            <li>&copy; 2025-202？ MAKABAKA</li>
+            <li>Design: <a>TIANSHUI</a></li>
             <div
                 style="text-decoration:none; height:20px; margin-top: 20px; line-height:20px; text-align:center;display:flex;justify-content: center;">
                 <img src="https://www.nanningcloud.com/Uploads/2022-10-30/bg_logo.nanningcloud.png" />
